@@ -1,5 +1,10 @@
 2011-09-15  Albert Chu <chu11@llnl.gov>
 
+	* ipmi-sensors/ipmi-sensors.8.pre.in: Fix some text.  Remove
+	experimental tag from --bridge-sensors option.
+	
+2011-09-15  Albert Chu <chu11@llnl.gov>
+
 	* libipmimonitoring/: Support IGNORE_SCANNING_DISABLED workaround.
 	
 2011-09-15  Albert Chu <chu11@llnl.gov>
